--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
     <section id="contact" class="contact">
       <div class="contact-form">
         <h2>Contacto</h2>
-        <form>
-          <input type="text" placeholder="Nombre" />
-          <input type="email" placeholder="Email" />
-          <textarea placeholder="Mensaje"></textarea>
+        <form action="https://formspree.io/f/mreazgba" method="POST">
+          <input type="text" name="name" placeholder="Nombre" />
+          <input type="email" name="email" placeholder="Email" />
+          <textarea name="message" placeholder="Mensaje"></textarea>
           <button type="submit">Enviar</button>
         </form>
       </div>
